<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="setting" android:title="@string/action_settings">

        <Preference
            android:key="pattern"
            android:title="@string/setting_pattern"/>
        <Preference
            android:key="change_theme"
            android:title="@string/setting_change_theme"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="about" android:title="@string/setting_about">
        <Preference
            android:key="version"
            android:title="@string/setting_version"/>
        <Preference
            android:key="author"
            android:title="@string/setting_author"/>
        <Preference
            android:key="weibo"
            android:title="@string/setting_weibo"/>
    </PreferenceCategory>
</PreferenceScreen>